...
    let message: String
    let undoTitle: String
    let onUndo: () -> Void

    init(
        message: String,
        undoTitle: String = "Cofnij",
        usesAdaptiveLayout: Bool = false,
        onUndo: @escaping () -> Void
    ) {
        self.usesAdaptiveLayout = usesAdaptiveLayout
        self.message = message
        self.undoTitle = undoTitle
...
